--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -1,11 +1,9 @@
 @import "_setting.scss";
 
 .board-content {
-  display: flex;
-  // margin-bottom: $gap;
-
-  margin: 0 $gap $gap;
+  height: $board-content-height;
   overflow-x: auto;
+  overflow-y: hidden;
   &::-webkit-scrollbar {
     --webkit-appearance: none;
   }
@@ -17,5 +15,11 @@
   &::-webkit-scrollbar-thumb {
     border-radius: 8px;
     background-color: $common-element-bg;
+  }
+
+  .column-drop-preview {
+    background-color: rgba(150, 150, 200, 0.1);
+    border: 1px dashed #abc;
+    margin: 5px 45px 5px 5px;
   }
 }
