--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,13 +1,13 @@
 @import "_setting.scss";
 
-li.task-item {
+.card-item {
   background-color: #fff;
   padding: $gap;
+
   border-radius: $card-border-radius;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-  &:not(:last-child) {
-    margin-bottom: $gap;
-  }
+  cursor: pointer;
+  margin-bottom: $gap;
   img {
     display: block;
     width: calc(100% + 2 * #{$gap});
