Handle State change when drag and drop
i
handle State change when drag and drop
:wq

--- a/src/_setting.scss
+++ b/src/_setting.scss
@@ -16,6 +16,7 @@ $common-element-bg: rgba(225, 225, 225, 0.3);
 $board-bg-color: #0079bf;
 $appbar-bg-color: #0067a3;
 $list-bg-color: #ebecf0;
+$app-main-text-color: #333;
 
 //Screen
 $screen-lg: 1201px;
