--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -1,6 +1,7 @@
 @import "_setting.scss";
 
 .board-content {
+  display: flex;
   height: $board-content-height;
   overflow-x: auto;
   overflow-y: hidden;
@@ -21,5 +22,21 @@
     background-color: rgba(150, 150, 200, 0.1);
     border: 1px dashed #abc;
     margin: 5px 45px 5px 5px;
+  }
+
+  .add-new-column {
+    width: 250px;
+    height: 32px;
+    line-height: 32px;
+    padding: 4px 0px 4px 15px;
+    cursor: pointer;
+    margin-left: $gap;
+    color: #fff;
+    background-color: hsla(0, 0%, 100%, 0.24);
+    border-radius: $column-border-radius;
+
+    &:hover {
+      background-color: hsla(0, 0%, 100%, 0.34);
+    }
   }
 }
