--- a/src/App.scss
+++ b/src/App.scss
@@ -12,4 +12,10 @@ body {
   height: 100vh;
   overflow: hidden;
   background-color: $board-bg-color;
+  color: $app-main-text-color;
+  .icon {
+    font-size: 14px;
+    margin-right: 3px;
+    color: #888;
+  }
 }
