Implement bootstrap, react-bootstrap, add new column

--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -5,6 +5,10 @@
   height: $board-content-height;
   overflow-x: auto;
   overflow-y: hidden;
+  &::after {
+    content: "";
+    flex: 0 0 10px;
+  }
   &::-webkit-scrollbar {
     --webkit-appearance: none;
   }
@@ -26,7 +30,7 @@
 
   .add-new-column {
     width: 250px;
-    height: 32px;
+    max-width: 250px;
     line-height: 32px;
     padding: 4px 0px 4px 15px;
     cursor: pointer;
@@ -37,6 +41,32 @@
 
     &:hover {
       background-color: hsla(0, 0%, 100%, 0.34);
+    }
+  }
+
+  .enter-new-column {
+    width: 250px;
+    max-width: 250px;
+    background-color: $column-bg-color;
+    line-height: 32px;
+    padding: 4px 10px;
+    margin-left: $gap;
+    border-radius: $column-border-radius;
+
+    input.input-enter-new-column {
+      margin: 5px 0;
+    }
+
+    span.cancel-new-column {
+      margin-left: $gap;
+      cursor: pointer;
+      i {
+        font-size: 18px;
+        color: #686767;
+        &:hover {
+          color: darken(#686767, 10);
+        }
+      }
     }
   }
 }
