--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -13,7 +13,7 @@ $card-list-height: calc(
   margin-left: $gap;
 
   > * {
-    background-color: $list-bg-color;
+    background-color: $column-bg-color;
 
     padding: 0 8px;
   }
@@ -38,7 +38,7 @@ $card-list-height: calc(
     color: #888;
 
     .footer-actions {
-      margin-left: $gap;
+      margin-left: 5px;
       cursor: pointer;
 
       &:hover {
@@ -57,8 +57,8 @@ $card-list-height: calc(
       width: 11px;
     }
     &::-webkit-scrollbar-thumb {
-      background-color: darken($list-bg-color, 15);
-      border-right: $column-border-radius solid $list-bg-color;
+      background-color: darken($column-bg-color, 15);
+      border-right: $column-border-radius solid $column-bg-color;
     }
 
     .card-ghost {
