Update & remove columns

--- a/src/_setting.scss
+++ b/src/_setting.scss
@@ -14,6 +14,7 @@ $board-content-height: 88vh;
 //colors
 $common-element-bg: rgba(225, 225, 225, 0.3);
 $board-bg-color: #0079bf;
+$input-border-color: #0079bf;
 $appbar-bg-color: #0067a3;
 $column-bg-color: #ebecf0;
 $app-main-text-color: #333;
