--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -18,15 +18,68 @@ $card-list-height: calc(
     padding: 0 8px;
   }
 
-  header {
-    padding-left: 15px;
+  header.column-drag-handle {
+    display: flex;
+    padding: 2px 8px;
     height: $column-header-height;
-    line-height: $column-header-height;
+    line-height: 33px;
     font-size: 16px;
     font-weight: bold;
     border-top-left-radius: $column-border-radius;
     border-top-right-radius: $column-border-radius;
     cursor: pointer;
+
+    .column-title {
+      flex: 90%;
+    }
+
+    .column-dropdown-actions {
+      flex: 10%;
+
+      .btn-group,
+      .btn-group-vertical {
+        vertical-align: inherit;
+      }
+
+      button.dropdown-btn {
+        padding: 0 $gap;
+        font-size: 16px;
+        font-weight: bold;
+        letter-spacing: 0.5px;
+        background-color: $column-bg-color;
+        border-color: $column-bg-color;
+        color: $app-main-text-color;
+        height: 32px;
+
+        &:after {
+          content: "...";
+          border: none;
+          vertical-align: 1.255em;
+        }
+
+        &:hover {
+          background-color: darken($column-bg-color, 10);
+          border-color: darken($column-bg-color, 10);
+        }
+      }
+
+      .dropdown-menu {
+        padding: 0;
+        min-width: 200px;
+        a.dropdown-item {
+          padding: 0.1rem 1rem;
+          font-size: 14px;
+
+          &:not(:last-child) {
+            border-bottom: 1px solid darken($column-bg-color, 10);
+          }
+
+          &:hover {
+            border-radius: $column-border-radius;
+          }
+        }
+      }
+    }
   }
 
   footer {
