add new card to column

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,6 +38,7 @@ body {
   [type="tel"].form-control:focus,
   [contenteditable].form-control:focus {
     box-shadow: none;
+    border: 1px solid $input-border-color;
   }
   .btn:focus,
   .btn:active {
@@ -53,7 +54,18 @@ body {
 
     &:focus {
       background-color: #fff;
-      border: 1px solid $input-border-color;
+    }
+
+    span.cancel-icon {
+      margin-left: $gap;
+      cursor: pointer;
+      i {
+        font-size: 18px;
+        color: #686767;
+        &:hover {
+          color: darken(#686767, 10);
+        }
+      }
     }
   }
 }
