concatenation of apis drag & drog columns and card

--- a/src/components/AppBar/AppBar.scss
+++ b/src/components/AppBar/AppBar.scss
@@ -7,4 +7,8 @@
   align-items: center;
   background-color: $appbar-bg-color;
   font-size: 1.5rem;
+
+  .col-no-padding {
+    align-items: center;
+  }
 }
